    - Many things that used to be items are now build/destroy tests instead.
      - Using a flint and steel is now considered a build fire action.
      - Emptying a bucket is a build action.
      - Filling a bucket is a destroy action.
      - Altering redstone repeaters is a destroy action.
      - And many others....
    - It is highly recommended you delete the switch_ids and item_use_ids lines in the config and let towny re-make them with the new defaults.
      - New itemuse list is 5 long, instead of 48.
      - New switch list is 30 long, instead of 128.
    - There are now groups of items that can be used in the itemuse/switch lists, which currently are:    
      - BOATS,MINECARTS,WOOD_DOORS,PRESSURE_PLATES,FENCE_GATES,TRAPDOORS,SHULKER_BOXES,BUTTONS 
    - Overall, the benefits are quite large. It is now much, much safer to give someone switch and item_use perms without having to worry about them breaking redstone builds, stripping logs and dyeing your signs.
  - Add BookFactory.
  - Fix /tw toggle friendlyfire showing feedback for the wrong world setting.
  - Fix sync loading chunk on teleport warmup, courtesy of silverwolfg11 with PR #4408.
    - Closes #4391.
  - Move PlayerKilledPlayerEvent to event/player/ package.
  - Fix Javadoc Errors (Again...) courtesy of TheFlagCourier with PR #4411.
  - Optimize API, courtesy of silverwolfg11 with PR #4412.
  - New Language: es-419.yml couresty of EuGNosii with PR #4405 (First-Time Contributor!)
    - replaces the out-dated and broken es-mx.yml.
  - Prevent PlayerCacheUtil from catching a NotRegisteredException when it really doesn't have to.
  - Fix being able to run /plot group rename without a name.
    - Closes #4417.
  - Add rename to the list of /plot group tab-completes.
  - French translation updated to 0.88 courtesy of Dzious with PR #4415 (First-Time Contributor!)
  - Add protection to Campfires from Splash Water Bottles.