@@ -122,16 +122,21 @@ public class Resident extends TownyObject implements InviteReceiver, EconomyHand
 	}
 	
 	public void freeFromJail(int index, boolean escaped) {
-		this.setJailed(false);
-		this.removeJailSpawn();
-		this.setJailTown(" ");
 		if (!escaped) {
 			TownyMessaging.sendMsg(this, Translation.of("msg_you_have_been_freed_from_jail"));
 			TownyMessaging.sendPrefixedTownMessage(town, Translation.of("msg_player_has_been_freed_from_jail_number", this.getName(), index));
-		} else
+		} else {
 			try {
-				TownyMessaging.sendGlobalMessage(Translation.of("msg_player_escaped_jail_into_wilderness", this.getName(), TownyUniverse.getInstance().getDataSource().getWorld(getPlayer().getLocation().getWorld().getName()).getUnclaimedZoneName()));
+				if (this.hasTown())
+					TownyMessaging.sendPrefixedTownMessage(this.getTown(),  Translation.of("msg_player_escaped_jail_into_wilderness", this.getName(), TownyUniverse.getInstance().getDataSource().getWorld(getPlayer().getLocation().getWorld().getName()).getUnclaimedZoneName()));
+				else 
+					TownyMessaging.sendMsg(this, Translation.of("msg_you_have_been_freed_from_jail"));
+				TownyMessaging.sendPrefixedTownMessage(TownyAPI.getInstance().getDataSource().getTown(this.getJailTown()), Translation.of("msg_player_escaped_jail_into_wilderness", this.getName(), TownyUniverse.getInstance().getDataSource().getWorld(getPlayer().getLocation().getWorld().getName()).getUnclaimedZoneName()));
 			} catch (NotRegisteredException ignored) {}
+		}
+		this.setJailed(false);
+		this.removeJailSpawn();
+		this.setJailTown(" ");		
 	}
 
 	public void setJailedByMayor(int index, Town town, Integer days) {
